@@ -48,7 +48,7 @@ from unittest2.loader import (
     TestLoader, defaultTestLoader, makeSuite, getTestCaseNames,
     findTestCases
 )
-from unittest2.main import TestProgram, main, main_
+from unittest2.main import TestProgram, main
 from unittest2.runner import TextTestRunner, TextTestResult
 
 try:
